upload file size limited to 5mb and added error message in clientside

--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@ canvas {
   display: block;
 }
 
-.close {
+.close-back {
   position: absolute;
   display: inline-block;
   width: 30px;
@@ -18,10 +18,10 @@ canvas {
   left: 25px;
   background: black;
 }
-.close:hover::before, .close:hover::after {
+.close-back:hover::before, .close-back:hover::after {
   background: rgba(255, 255, 255, 1);
 }
-.close::before, .close::after {
+.close-back::before, .close-back::after {
   content: '';
   position: absolute;
   height: 2px;
@@ -31,21 +31,21 @@ canvas {
   margin-top: -1px;
   background: rgba(255, 255, 255, 0.4);
 }
-.close::before {
+.close-back::before {
   -webkit-transform: rotate(45deg);
   -moz-transform: rotate(45deg);
   -ms-transform: rotate(45deg);
   -o-transform: rotate(45deg);
   transform: rotate(45deg);
 }
-.close::after {
+.close-back::after {
   -webkit-transform: rotate(-45deg);
   -moz-transform: rotate(-45deg);
   -ms-transform: rotate(-45deg);
   -o-transform: rotate(-45deg);
   transform: rotate(-45deg);
 }
-.close.thick::before, .close.thick::after {
+.close-back.thick::before, .close-back.thick::after {
   height: 4px;
   margin-top: -2px;
 }
