--- a/src/client/Visualization.css
+++ b/src/client/Visualization.css
@@ -6,5 +6,6 @@
     position: absolute;
     top: 10px;
     left: 10px;
-    display: inline-block;
+    display: flex;
+    padding-left: 100px;
 }
